<resources>
    <string name="app_name">Test App</string>
    <string name="start">Start</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="myColor">#F5F5F5</color>
    <string name="celsius">to Celsius</string>
    <string name="fahrenheit">to Fahrenheit</string>
    <string name="calc">Calculate</string>
    <string name="button">Button</string>
    <string name="switchImagesLayout">Switch images layout</string>
    <string name="scrollView">Switch to ScrollView</string>
    <string name="change">Change</string>
    <string name="header">This is a header</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="jsonTest">JSON Test</string>
</resources>
